// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`export-declare.ts [babel-ts] format 1`] = `
"'export declare' must be followed by an ambient declaration. (1:16)
> 1 | export declare foo;
    |                ^
  2 |"
`;

exports[`multiline-declaration-abstract-class.ts [babel-ts] format 1`] = `
"Missing semicolon. (1:8)
> 1 | declare abstract
    |        ^
  2 | class A {}
  3 |"
`;

exports[`multiline-declaration-interface.ts [babel-ts] format 1`] = `
"Missing semicolon. (1:8)
> 1 | declare interface
    |        ^
  2 | I
  3 | {}
  4 |"
`;

exports[`multiline-declaration-module.ts [babel-ts] format 1`] = `
"Missing semicolon. (1:8)
> 1 | declare module
    |        ^
  2 | 'bar'
  3 | {}
  4 |"
`;

exports[`multiline-declaration-type.ts [babel-ts] format 1`] = `
"Missing semicolon. (1:8)
> 1 | declare type
    |        ^
  2 | T = number
  3 |"
`;

exports[`type-annotation-expr-statement.ts [babel-ts] format 1`] = `
"Did not expect a type annotation here. (1:3)
> 1 | (a: T);
    |   ^
  2 |"
`;

exports[`type-annotation-func.ts [babel-ts] format 1`] = `
"Did not expect a type annotation here. (1:10)
> 1 | func<T>(a: T);
    |          ^
  2 |"
`;

exports[`type-annotation-in-jsx.tsx [babel-ts] format 1`] = `
"Did not expect a type annotation here. (3:22)
  1 | function Foo() {
  2 |   return (
> 3 |     <div propA={[ key: value ]} propsB={(a: b)} />
    |                      ^
  4 |   );
  5 | }
  6 |"
`;
